# Practica-1---Neurona

./: help.py  interactive_embed_plot.py  main.py  matplotlib_interactive_poly.py  pyproject.toml  tkinter_matplotlib_embeded.py
