[tool.poetry]
name = "practica-1-neurona"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
"mpl-toolkits.clifford" = "^0.0.3"
tkinter-math = "^0.2.4"
tkinter-temps = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
